spo2-wrist-sensor/build/log/idf_py_stdout_output_14709
Command: ninja all
[1/12] Performing build step for 'bootloader'
[1/1] cd /home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/build/bootloader && /home/pedro/.espressif/python_env/idf6.0_py3.12_env/bin/python /home/pedro/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/build/bootloader/bootloader.bin
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
[2/12] No install step for 'bootloader'
[3/12] Completed 'bootloader'
[4/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/safety/contact_detector.c.obj
[5/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/processing/hr_estimator.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/processing/hr_estimator.c.obj 
/home/pedro/.espressif/tools/riscv32-esp-elf/esp-15.2.0_20251204/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/build/config -I/home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/main -I/home/pedro/esp/esp-idf/components/esp_libc/platform_include -I/home/pedro/esp/esp-idf/components/freertos/config/include -I/home/pedro/esp/esp-idf/components/freertos/config/include/freertos -I/home/pedro/esp/esp-idf/components/freertos/config/riscv/include -I/home/pedro/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/pedro/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/pedro/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/pedro/esp/esp-idf/components/freertos/esp_additions/include -I/home/pedro/esp/esp-idf/components/esp_hw_support/include -I/home/pedro/esp/esp-idf/components/esp_hw_support/include/soc -I/home/pedro/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/pedro/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/pedro/esp/esp-idf/components/esp_hw_support/etm/include -I/home/pedro/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/pedro/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/pedro/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/pedro/esp/esp-idf/components/esp_hw_support/modem/include -I/home/pedro/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/home/pedro/esp/esp-idf/components/esp_hw_support/port/esp32c3/. -I/home/pedro/esp/esp-idf/components/esp_hw_support/port/esp32c3/include -I/home/pedro/esp/esp-idf/components/heap/include -I/home/pedro/esp/esp-idf/components/heap/tlsf -I/home/pedro/esp/esp-idf/components/log/include -I/home/pedro/esp/esp-idf/components/soc/include -I/home/pedro/esp/esp-idf/components/soc/esp32c3 -I/home/pedro/esp/esp-idf/components/soc/esp32c3/include -I/home/pedro/esp/esp-idf/components/soc/esp32c3/register -I/home/pedro/esp/esp-idf/components/hal/platform_port/include -I/home/pedro/esp/esp-idf/components/hal/esp32c3/include -I/home/pedro/esp/esp-idf/components/hal/include -I/home/pedro/esp/esp-idf/components/esp_rom/include -I/home/pedro/esp/esp-idf/components/esp_rom/esp32c3/include -I/home/pedro/esp/esp-idf/components/esp_rom/esp32c3/include/esp32c3 -I/home/pedro/esp/esp-idf/components/esp_rom/esp32c3 -I/home/pedro/esp/esp-idf/components/esp_common/include -I/home/pedro/esp/esp-idf/components/esp_system/include -I/home/pedro/esp/esp-idf/components/esp_system/port/soc -I/home/pedro/esp/esp-idf/components/esp_system/port/include/riscv -I/home/pedro/esp/esp-idf/components/esp_system/port/include/private -I/home/pedro/esp/esp-idf/components/esp_stdio/include -I/home/pedro/esp/esp-idf/components/riscv/include -I/home/pedro/esp/esp-idf/components/esp_hal_gpio/include -I/home/pedro/esp/esp-idf/components/esp_hal_gpio/esp32c3/include -I/home/pedro/esp/esp-idf/components/esp_hal_usb/include -I/home/pedro/esp/esp-idf/components/esp_hal_usb/esp32c3/include -I/home/pedro/esp/esp-idf/components/esp_hal_pmu/include -I/home/pedro/esp/esp-idf/components/esp_hal_pmu/esp32c3/include -I/home/pedro/esp/esp-idf/components/esp_hal_ana_conv/include -I/home/pedro/esp/esp-idf/components/esp_hal_ana_conv/esp32c3/include -I/home/pedro/esp/esp-idf/components/esp_hal_dma/include -I/home/pedro/esp/esp-idf/components/esp_hal_dma/esp32c3/include -I/home/pedro/esp/esp-idf/components/lwip/include -I/home/pedro/esp/esp-idf/components/lwip/include/apps -I/home/pedro/esp/esp-idf/components/lwip/lwip/src/include -I/home/pedro/esp/esp-idf/components/lwip/port/include -I/home/pedro/esp/esp-idf/components/lwip/port/freertos/include -I/home/pedro/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/pedro/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/pedro/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/pedro/esp/esp-idf/components/driver/i2c/include -I/home/pedro/esp/esp-idf/components/driver/touch_sensor/include -I/home/pedro/esp/esp-idf/components/driver/twai/include -I/home/pedro/esp/esp-idf/components/esp_hal_i2c/esp32c3/include -I/home/pedro/esp/esp-idf/components/esp_hal_i2c/include -I/home/pedro/esp/esp-idf/components/esp_hal_twai/include -I/home/pedro/esp/esp-idf/components/esp_hal_twai/esp32c3/include -I/home/pedro/esp/esp-idf/components/esp_hal_touch_sens/include -I/home/pedro/esp/esp-idf/components/esp_timer/include @"/home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor=. -fmacro-prefix-map=/home/pedro/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/processing/hr_estimator.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/processing/hr_estimator.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/processing/hr_estimator.c.obj -c /home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/main/processing/hr_estimator.c
/home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/main/processing/hr_estimator.c: In function 'average_u32':
/home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/main/processing/hr_estimator.c:14:27: error: 'dou' undeclared (first use in this function)
   14 |     return (float)(sum / (dou   ble)n);
      |                           ^~~
/home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/main/processing/hr_estimator.c:14:27: note: each undeclared identifier is reported only once for each function it appears in
/home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/main/processing/hr_estimator.c:14:30: error: expected ')' before 'ble'
   14 |     return (float)(sum / (dou   ble)n);
      |                          ~   ^  ~~~
      |                              )
/home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/main/processing/hr_estimator.c:14:37: error: expected ')' before 'n'
   14 |     return (float)(sum / (dou   ble)n);
      |                   ~                 ^
      |                                     )
[6/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/safety/pulse_detector.c.obj
[7/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app/app_controller.c.obj
In file included from /home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/main/app/app_controller.c:5:
/home/pedro/esp/esp-idf/components/driver/i2c/include/driver/i2c.h:13:9: note: '#pragma message: 
================================ CRITICAL WARNING ================================
This legacy I2C driver (driver/i2c.h) is officially END-OF-LIFE (EOL) as of ESP-IDF v6.0.

1. NO SUPPORT: ESP-IDF will not provide updates, bug fixes, or security patches timely.
2. PLANNED REMOVAL: This driver WILL BE REMOVED in ESP-IDF v7.0 (next major release).
3. ACTION REQUIRED: Migrate to 'driver/i2c_master.h' or 'driver/i2c_slave.h' immediately.
   - If you are a library maintainer, please update your code.
   - If you are using 3rd-party libraries, contact the authors for updates.

4. SUPPRESS WARNING: Set Kconfig 'CONFIG_I2C_SUPPRESS_DEPRECATE_WARN=y' to silent
   this warning. However, by doing so, YOU ASSUME ALL RISKS including potential
   security vulnerabilities, system instability, and future incompatibility.

For API reference of the new I2C driver, see: https://docs.espressif.com/projects/esp-idf/en/latest/esp32/api-reference/peripherals/i2c.html
For other items about migration, see: https://docs.espressif.com/projects/esp-idf/en/latest/esp32/migration-guides/index.html
==================================================================================
   '
   13 | #pragma message("\n" \
      |         ^~~~~~~
/home/pedro/Documentos/git/portifolio/RFC-MelhoriaProjetoIBlueIt-/spo2-wrist-sensor/main/app/app_controller.c:136:13: warning: 'i2c_scan' defined but not used [-Wunused-function]
  136 | static void i2c_scan(void) {
      |             ^~~~~~~~
ninja: build stopped: subcommand failed.
